--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -120,7 +120,6 @@ html {
   text-decoration: none;
   display: block;
   text-align: center;
-  padding: 15px;
 }
 .button:hover {
   filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
@@ -217,12 +216,26 @@ html {
 }
 
 /* Pets in zoo block */
+.auto-carousel {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 630px;
+  margin-top: 4.4em;
+}
 .slider-box__wrapper {
-  padding-top: 4.4em;
+  width: 100%;
+  max-width: 992px;
+  position: relative;
 }
 .slider-box {
   display: flex;
   justify-content: space-between;
+  overflow: auto;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
 }
 .arrow {
   border: none;
@@ -234,6 +247,17 @@ html {
   border-radius: 50%;
   cursor: pointer;
   overflow: hidden;
+  position: absolute;
+}
+#arrow-prev {
+  top: 50%;
+  left: -115px;
+  transform: translate(50%, -50%);
+}
+#arrow-next {
+  top: 50%;
+  right: -115px;
+  transform: translate(-50%, -50%);
 }
 .arrow-left:hover,
 .arrow-right:hover {
@@ -250,13 +274,23 @@ html {
 }
 .cards {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 30px 20px;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto;
+  grid-row-gap: 30px;
+  grid-column-gap: 20px;
+  grid-auto-flow: column;
+  margin: auto;
+  box-sizing: border-box;
+}
+.cards::-webkit-scrollbar {
+  height: 0;
 }
 .card-wrapper {
   position: relative;
   overflow: hidden;
+  width: 233px;
+  height: 300px;
+  background: green;
 }
 .card-wrapper:hover {
   transform: matrix(1.05, 0, 0, 1.05, 0, 0);
@@ -284,7 +318,7 @@ html {
   line-height: 19px;
 }
 .pets-in-zoo__button {
-  margin-top: 2.4em;
+  margin-top: 2.6em;
   padding-bottom: 100px;
 }
 .choose-your-favourite__button {
@@ -330,8 +364,11 @@ html {
 }
 .feedback-slider-box {
   display: flex;
+  position: relative;
   justify-content: space-between;
   margin: 0 auto;
+  width: 100%;
+  max-width: 1015px;
 }
 .feedback__card-wrapper {
   max-width: 233px;
@@ -390,6 +427,264 @@ html {
   width: 246px;
   height: 51px;
 }
+#arrow-left {
+  top: 50%;
+  left: -105px;
+  transform: translate(50%, -50%);
+}
+#arrow-right {
+  top: 50%;
+  right: -105px;
+  transform: translate(-50%, -50%);
+}
+.cover {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10;
+}
+.form-feedback {
+  width: 630px;
+  height: 436px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 100;
+  top: calc(50vh - 320px);
+  left: calc(50vw - 240px);
+  background-color: #fff;
+}
+.form-feedback--cross {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  cursor: pointer;
+  top: 10px;
+  right: 25px;
+}
+.form-feedback--cross:after {
+  content: '';
+  height: 40px;
+  border-left: 1px solid #000;
+  position: absolute;
+  transform: rotate(45deg);
+  left: 28px;
+}
+.form-feedback--cross:before {
+  content: '';
+  height: 40px;
+  border-left: 1px solid #000;
+  position: absolute;
+  transform: rotate(-45deg);
+  left: 28px;
+}
+.form-content {
+  width: 470px;
+  height: 336px;
+}
+.input,
+.textarea {
+  border: 1px solid #9ca498;
+  padding: 10px 11px 10px;
+}
+#name,
+#email,
+.textarea-feedback {
+  background-color: #dff5b0;
+}
+.input {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 8px;
+}
+textarea {
+  width: 100%;
+  height: 180px;
+  margin-bottom: 20px;
+}
+#send,
+#next {
+  background-color: #70cb0e;
+  margin: 0 auto;
+  width: 177px;
+  height: 40px;
+}
+.form-donate {
+  width: 630px;
+  height: 339px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 100;
+  top: calc(50vh - 320px);
+  left: calc(50vw - 240px);
+  background-color: #fff;
+}
+.form-donate-content {
+  width: 470px;
+  height: 239px;
+}
+#animal-list {
+  width: 100%;
+  height: 39px;
+  background-color: #dff5b0;
+  text-align-last: center;
+  /* appearance: none; */
+}
+#amount {
+  width: 303px;
+  margin-right: 3px;
+}
+#currency {
+  width: 159px;
+  height: 39px;
+}
+#animal-list,
+#amount,
+#currency {
+  margin-bottom: 8px;
+}
+.textarea-donate {
+  height: 85px;
+}
+.form-pay {
+  width: 630px;
+  height: 389px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 100;
+  top: calc(50vh - 320px);
+  left: calc(50vw - 240px);
+  background-color: #fff;
+}
+.form-background-card {
+  position: absolute;
+  width: 358px;
+  height: 203px;
+  left: 50px;
+  top: 50px;
+  background: linear-gradient(0deg, #dcdcdc, #dcdcdc), linear-gradient(0deg, #dcdcdc, #dcdcdc), #dcdcdc;
+  border-radius: 10px;
+  z-index: 1;
+}
+.form-background-card-back {
+  position: absolute;
+  width: 326px;
+  height: 189px;
+  left: 254px;
+  top: 100px;
+  background: #c6c5c5;
+  border-radius: 10px;
+  z-index: 0;
+}
+#card-number,
+#cadholder-name {
+  width: 306px;
+}
+#card-month,
+#card-year {
+  width: 80px;
+}
+.card-number,
+.card-month,
+.card-year,
+.cardholder-name,
+.cvc {
+  text-align-last: center;
+}
+.card-number {
+  position: absolute;
+  width: 306px;
+  height: 39px;
+  left: 26px;
+  top: 35px;
+  display: flex;
+}
+.card-month {
+  position: absolute;
+  left: 26px;
+  top: 82px;
+}
+.card-year {
+  position: absolute;
+  left: 110px;
+  top: 82px;
+}
+.cardholder-name {
+  position: absolute;
+  left: 26px;
+  top: 129px;
+  display: flex;
+}
+.cvc-background--bold-stripe {
+  width: 326px;
+  position: absolute;
+  height: 37px;
+  left: -217px;
+  top: -45px;
+  background: linear-gradient(0deg, #a8a8a8, #a8a8a8), linear-gradient(0deg, #a8a8a8, #a8a8a8), linear-gradient(0deg, #a8a8a8, #a8a8a8), linear-gradient(0deg, #a8a8a8, #a8a8a8),
+    linear-gradient(0deg, #a8a8a8, #a8a8a8), linear-gradient(0deg, #a8a8a8, #a8a8a8), #a8a8a8;
+}
+.cvc-background--thin-stripe {
+  position: absolute;
+  content: '';
+  width: 326px;
+  height: 5px;
+  left: -217px;
+  background: linear-gradient(0deg, #a8a8a8, #a8a8a8), linear-gradient(0deg, #a8a8a8, #a8a8a8), linear-gradient(0deg, #a8a8a8, #a8a8a8), linear-gradient(0deg, #a8a8a8, #a8a8a8),
+    linear-gradient(0deg, #a8a8a8, #a8a8a8), linear-gradient(0deg, #a8a8a8, #a8a8a8), #a8a8a8;
+  z-index: -1;
+}
+.thin-stripe-1 {
+  top: 0;
+}
+.thin-stripe-2 {
+  top: 10px;
+}
+.thin-stripe-3 {
+  top: 20px;
+}
+.thin-stripe-4 {
+  top: 30px;
+}
+.cvc {
+  position: absolute;
+  width: 75px;
+  height: 35px;
+  left: 215px;
+  top: 73px;
+  display: flex;
+}
+#cvc {
+  width: 75px;
+  height: 35px;
+}
+#pay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 150px;
+  height: 40px;
+  left: calc(50% - 150px / 2);
+  top: 309px;
+}
+input:invalid {
+  border: 1px solid red;
+}
+.hidden {
+  display: none;
+}
+#send.invalid {
+  opacity: 50%;
+}
 
 /* Footer */
 .footer {
@@ -437,8 +732,8 @@ html {
 }
 .footer-menu {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
   grid-row-gap: 15px;
   grid-column-gap: 80px;
 }
@@ -600,13 +895,13 @@ html {
   .pay-and-feed__icons {
     display: flex;
     flex-wrap: wrap;
-   align-items: stretch;
-   background-image: url(../../assets/icons/pay/arrow-circle.svg);
-   padding-top: 90px;
-   justify-content: center;
-   background-position: center;
-   background-position-x: 119px;
-   height: auto;
+    align-items: stretch;
+    background-image: url(../../assets/icons/pay/arrow-circle.svg);
+    padding-top: 90px;
+    justify-content: center;
+    background-position: center;
+    background-position-x: 119px;
+    height: auto;
   }
   .footer-background {
     height: 383px;
